Fix skip link contrast issue

--- a/src/_includes/assets/scss/base/_utils.scss
+++ b/src/_includes/assets/scss/base/_utils.scss
@@ -19,11 +19,7 @@
 }
 
 // Accessibility fun!
-.skip-link:not(:focus) {
-  @extend .visually-hidden;
-}
-
-.skip-link:focus {
+.skip-link {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -35,6 +31,11 @@
   text-decoration: none;
   font-weight: 700;
   font-size: var(--step-0);
+  transform: translateY(-100%);
+
+  &:focus {
+    transform: translateY(0%);
+  }
 }
 
 // General shit that doesn't belong anywhere else.
